cmake_minimum_required(VERSION 3.17)
project(VulkanSDL)
set(PROJECT_NAME VulkanSDL)
set(CMKAE_CXX_STANDARD 20)
find_package(Vulkan REQUIRED)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} Vulkan::Vulkan ${SDL2_LIBRARIES})

